# t-lang

./: Cargo.toml  README.md  TODO.md  lexer-notes.md  main.rs  notes.md  package-lock.json  package.json  parser.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy-wasm.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: ast.rs  errors.rs  eval.rs  exec.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  reader.rs  symbol_table.rs
core/src/interpreter/: mod.rs  operations.rs  symbol_table.rs
core/src/lexer/: mod.rs  rules.rs  strings.rs
core/src/parser/: grammar.rs  mod.rs
rust-lessons/methods/: rectangle.rs
rust-lessons/ownership/: function-scope.rs  variable.rs
rust-lessons/structs/: no-debug.rs
src/: interpreter.rs  lexer.rs  main.rs  parser.rs
tasks/deploy/: index.js  package-lock.json  package.json  run.js
tasks/deploy/utils/: walkDir.js
wasm/: Cargo.toml  package-lock.json  package.json  tools.txt  webpack.config.js
wasm/config/: debug.config.js  pack.config.js
wasm/css/: index.css
wasm/js/: index.js
wasm/scripts/: build.js
wasm/src/: input.rs  key.rs  lib.rs
wasm/static/: index.html
