[package]
name = "tlang"
version = "0.1.0"
authors = ["Thomas L'Anglais <thomas1446@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10.1", features = ["macros"] }

[[bin]]
name = "tlang"
path = "src/main.rs"
