[package]
name = "cli"
version = "0.1.0"
authors = ["Thomas L'Anglais <thomas1446@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["rt", "rt-multi-thread", "macros"] }
core = { path = "../core" }

[[bin]]
name = "cli"
path = "src/main.rs"
