[package]
name = "tlang-wasm"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
async-channel = "1.6.1"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.30"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[dependencies.web-sys]
version = "0.3.57"
features = [
    "Element",
    "KeyboardEvent"
]

# The core language crate
[dependencies.lang]
path = "../core"
package = "core"
